# aliyun-fc-acme

./: .env.example  .gitignore  README.md  build.py  index.py  pyproject.toml  run_local.py
.github/workflows/: build.yml
src/: acme_client.py  cert_deployer.py  config.py  dns_validator.py  main.py  oss_deployer.py
tests/: test_acme_client.py  test_cert_deployer.py  test_config.py  test_dns_validator.py  test_index.py  test_oss_deployer.py
